# twicc

./: .env.example  .gitignore  .twicc-tmux.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  devctl.py  hatch_build.py  pyproject.toml  run.py  twicc-quota.py
.github/: FUNDING.yml
docs/: adr-display-levels.md  architecture-decisions.md  frontend-rendering-performance-audit.md  specs-poc.md  terminal-presets.md
docs/archives_poc/: 2026-01-23-smart-cache-fetch.md  2026-01-24-tasks-display-levels.md  2026-01-28-specs-partial-visibility.md  2026-01-30-virtual-scroller-addendum-1.md  2026-01-30-virtual-scroller-addendum-2.md  2026-01-30-virtual-scroller.md
docs/plans/: 2025-02-05-auto-title-generation.md  2026-01-31-all-projects-view.md  2026-02-22-unified-tooltip-component.md  2026-02-26-terminal-mobile-touch-support.md  2026-02-27-live-settings-update-design.md  2026-02-27-permission-mode-design.md  2026-02-27-permission-mode-plan.md  2026-02-28-create-project-design.md  2026-02-28-create-project-plan.md  language-detection-from-path-sibling.md
docs/specs/: 2026-01-31-sdk-integration-phase0-research.md  2026-01-31-sdk-integration-phase1-initial-implementation.md  2026-01-31-sdk-integration-phase2-draft.md  2026-02-02-draft-sessions.md  2026-02-02-session-rename.md  2026-02-05-dev-tools-content-draft.md  2026-02-05-dev-tools-panel.md  2026-02-05-document-upload.md  2026-02-06-git-directory-resolution.md  2026-02-07-keepalive-session-cache.md  2026-02-08-pending-requests.md  2026-02-08-split-session-item-links.md  cost-and-context-usage.md  search-feature-spec.md  session-items-metadata-propagation.md  subagents-sync.md  subagents-tabs-spec.md
docs/specs/2026-02-09-git-log/: 1-contexte.md  2-architecture-source.md  3-portage.md  4-plan-index.md  4-plan-phase-0.md  4-plan-phase-1.md  4-plan-phase-2.md  4-plan-phase-3.md  4-plan-phase-4.md  4-plan-phase-5.md  4-plan-phase-6.md  4-plan-phase-7.md  4-plan-phase-8.md  review-impact-phase-4.md  review-impact-phases-0-1.md  review-impact-phases-2.md  review-impact-phases-3.md  review-impact-phases-5.md
docs/superpowers/plans/: 2026-03-10-search-frontend.md  2026-03-27-custom-combos-and-snippets.md  2026-03-27-terminal-extra-keys-bar.md  2026-04-03-smart-collapse-unchanged.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: site.webmanifest
frontend/src/: App.vue  constants.js  main.js  router.js
frontend/src/components/: FilePane.vue  (+75 more)
src/twicc/: __init__.py  __main__.py  asgi.py  background.py  background_task.py  cli.py  compute.py  compute_batch.py  cron_restart.py  env.py  file_content.py  file_tree.py  git.py  initial_sync.py  message_snippets.py  paths.py  pending_permission_mode.py  pending_selected_model.py  pending_settings.py  pricing_task.py  search.py  sessions_watcher.py  settings.py  settings_test.py  startup_progress.py  sync.py  synced_settings.py  terminal.py  terminal_config.py  terminal_dispatch.py  terminal_windows.py  title_suggest.py  titles.py  urls.py  usage_task.py  version.py  views.py  watcher.py
src/twicc_poc/: __init__.py  background.py  compute.py  settings.py  settings_test.py  sync.py  urls.py  views.py  watcher.py
tests/: conftest.py  test_group_logic.py  test_pending_request.py
(+707 files in other folders)
