[project]
name = "twicc-poc"
version = "0.1.0"
description = "Claude Code Web UI - POC"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.3.2",
    "daphne>=4.2.1",
    "django>=6.0.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]

[project.scripts]
twicc_poc = "twicc_poc:main"

[tool.setuptools.packages.find]
where = ["src"]
