[project]
name = "twicc"
version = "0.1.0"
description = "Claude Code Web UI"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.3.2",
    "claude-agent-sdk>=0.1.26",
    "daphne>=4.2.1",
    "django>=6.0.1",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
    "xmltodict>=1.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
]

[project.scripts]
twicc = "twicc:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "twicc.settings_test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = "-v"
