[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twicc"
version = "0.1.0"
description = "Claude Code Web UI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Stéphane Angel", email = "s.angel@twidi.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "channels>=4.3.2",
    "claude-agent-sdk>=0.1.31",
    "daphne>=4.2.1",
    "django>=6.0.1",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
    "xmltodict>=1.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/twidi/twicc"
Repository = "https://github.com/twidi/twicc"
"Bug Tracker" = "https://github.com/twidi/twicc/issues"

[project.scripts]
twicc = "twicc:main"

[tool.hatch.build]
# Built frontend assets are gitignored but must be included in the package.
artifacts = ["src/twicc/static/frontend/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/twicc"]

# Build hook (hatch_build.py) runs npm ci + npm run build before packaging.
# Applied globally so both sdist and wheel contain fresh frontend assets.
[tool.hatch.build.hooks.custom]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "twicc.settings_test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "ipython>=9.10.0",
]
